--- a/fileo/fileo/templates/registration/login.html
+++ b/fileo/fileo/templates/registration/login.html
@@ -5,33 +5,16 @@
   <title>Login</title>
 </head>
 <body>
+  
+  <form method='POST'>
+    {% csrf_token %}
+    {{ form }}
+    <input type="submit" value="Login">
+  </form>
+
   {% if form.errors %}
     <p> Your username and password didn't match. Please try again. </p>
   {% endif %}
 
-  {% if next %}
-    {% if user.is_authenticated %}
-      <p>Please login to continue</p>
-    {% else %}
-      <p>Please login to see this page</p>
-    {% endif %}
-  {% endif %}
-
-  <form method="post" action="{% url 'login' %}">
-    {% csrf_token %}
-    <table>
-    <tr>
-        <td>{{ form.username.label_tag }}</td>
-        <td>{{ form.username }}</td>
-    </tr>
-    <tr>
-        <td>{{ form.password.label_tag }}</td>
-        <td>{{ form.password }}</td>
-    </tr>
-    </table>
-
-    <input type="submit" value="login">
-    <input type="hidden" name="next" value="{{ next }}">
-  </form>
 </body>
 </html>
