--- a/fileo/fileo/templates/fileo/myfiles.html
+++ b/fileo/fileo/templates/fileo/myfiles.html
@@ -1,3 +1,4 @@
+<p>Logged in as: {{ user.username }}</p>
 <form method="POST" enctype="multipart/form-data">
   {% csrf_token %}
   <input type="file" name="upload_file">
