--- a/fileo/fileo/templates/registration/register.html
+++ b/fileo/fileo/templates/registration/register.html
@@ -2,15 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Login</title>
+  <title></title>
 </head>
 <body>
-  
   <form method='POST'>
     {% csrf_token %}
     {{ form }}
-    <input type="submit" value="Login">
+    <input type="submit" value="Register">
   </form>
-
 </body>
 </html>
