--- a/fileo/fileo/templates/fileo/index.html
+++ b/fileo/fileo/templates/fileo/index.html
@@ -1,4 +1,6 @@
-<p>Home</p>
-<a href="/account/login">Login</a>
-<a href="/account/register">Register</a>
-<a href="/myfiles">Files</a>
+{% extends 'base.html' %}
+
+
+{% block content %}
+<a href="{% url 'files' %}">Files</a>
+{% endblock content %}
