--- a/fileo/fileo/templates/registration/login.html
+++ b/fileo/fileo/templates/registration/login.html
@@ -1,16 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Login</title>
-</head>
-<body>
+{% extends 'base.html' %}
   
+
+{% block content %}
   <form method='POST'>
     {% csrf_token %}
     {{ form }}
     <input type="submit" value="Login">
   </form>
+{% endblock content %}
 
-</body>
-</html>
