--- a/fileo/fileo/templates/registration/register.html
+++ b/fileo/fileo/templates/registration/register.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title></title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+
+{% block content %}
   <form method='POST'>
     {% csrf_token %}
     {% for field in registration_form %}
@@ -23,5 +20,4 @@
     {% endfor %}
     <input type="submit" value="Register">
   </form>
-</body>
-</html>
+{% endblock content %}
