--- a/fileo/fileo/templates/registration/login.html
+++ b/fileo/fileo/templates/registration/login.html
@@ -1,11 +1,27 @@
 {% extends 'base.html' %}
-  
+
 
 {% block content %}
   <form method='POST'>
     {% csrf_token %}
-    {{ form }}
+    {% for field in login_form %}
+      <p>
+        {{ field.label_tag }}
+        {{ field }}
+
+        {% if field.help_text %}
+          <small style='color: grey'>{{ field.help_text }}</small>
+        {% endif %}
+
+        {% for error in field.errors %}
+          <p style='color: red'>{{ error }}</p>
+        {% endfor %}
+
+        {% if login_form.non_field_errors %}
+          <p style='color: red'>{{ login_form.non_field_errors }}</p>
+        {% endif %}
+      </p>
+    {% endfor %}
     <input type="submit" value="Login">
   </form>
 {% endblock content %}
-
